--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # IDE
 .vscode
 .idea/*
-
+.python-version
 
 # Python
 __pycache__/
@@ -32,3 +32,4 @@ tmp
 # Docs
 docs/_build/
 docs/_templates/
+build/
